--- a/Config.json
+++ b/Config.json
@@ -17,6 +17,11 @@
       "DBConnectionString": "jdbc:sqlserver://localhost:1433;databaseName=T_work",
       "DBUserName": "sa",
       "DBUserPass": "7777"
+    },{
+      "DBDriver": "com.microsoft.sqlserver.jdbc.SQLServerDriver",
+      "DBConnectionString": "jdbc:sqlserver://localhost:1433;databaseName=T_work",
+      "DBUserName": "sa",
+      "DBUserPass": "7777"
     }
   ],
   "EntityPackage": "Entity.",
@@ -31,6 +36,10 @@
     },
     {
       "EntityName": "Bean_T_YVersion",
+      "EntityPrimaryKey": "C_ID"
+    },
+    {
+      "EntityName": "Bean_T_YConfig",
       "EntityPrimaryKey": "C_ID"
     }
   ]
